[package]
name = "market_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.18"
rocket = { version = "=0.5.0-rc.3", features = ["json", "secrets"] }
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors", branch = "master" }
scraper = "0.16.0"
serde = "1.0.163"
tokio = { version = "1.28.1", features = ["full"]}
